--- a/index.html
+++ b/index.html
@@ -3,34 +3,50 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MeeChain MeeBot DApp</title>
+    <title>MeeChain MeeBot Altar</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700;900&family=Space+Grotesk:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
-      body {
-        font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-        background-color: #0f172a; /* Slate 900 */
-        color: #e2e8f0; /* Slate 200 */
+      :root {
+        --ritual-glow: 0 0 20px rgba(99, 102, 241, 0.4);
       }
-
-      /* Custom Keyframes for Splash Screen */
+      body {
+        font-family: 'Space Grotesk', sans-serif;
+        background-color: #020617;
+        color: #f8fafc;
+        overflow-x: hidden;
+        margin: 0;
+      }
+      h1, h2, h3, .ritual-font {
+        font-family: 'Cinzel', serif;
+      }
+      .ritual-card {
+        background: rgba(15, 23, 42, 0.8);
+        backdrop-filter: blur(12px);
+        border: 1px solid rgba(148, 163, 184, 0.1);
+        box-shadow: var(--ritual-glow);
+      }
+      .ritual-gradient-text {
+        background: linear-gradient(to right, #60a5fa, #a855f7, #ec4899);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
       @keyframes splashFade {
         0% { opacity: 0; }
-        10% { opacity: 1; } /* Fade in over first 10% (0.35s for 3.5s total) */
-        90% { opacity: 1; } /* Stay visible until 90% (3.15s for 3.5s total) */
-        100% { opacity: 0; visibility: hidden; } /* Fade out over last 10% */
+        10% { opacity: 1; } 
+        90% { opacity: 1; } 
+        100% { opacity: 0; visibility: hidden; } 
       }
       .animate-splashFade {
         animation: splashFade 3.5s ease-in-out forwards;
       }
-
       @keyframes scaleIn {
         0% { transform: scale(0.8); opacity: 0; }
         100% { transform: scale(1); opacity: 1; }
       }
       .animate-scaleIn {
-        animation: scaleIn 1s cubic-bezier(0.68, -0.55, 0.27, 1.55) forwards; /* Bouncy effect */
+        animation: scaleIn 1s cubic-bezier(0.68, -0.55, 0.27, 1.55) forwards;
       }
-
       @keyframes pulseGlowSlow {
         0%, 100% { opacity: 0.3; transform: scale(1); }
         50% { opacity: 0.7; transform: scale(1.1); }
@@ -38,52 +54,45 @@
       .animate-pulseGlowSlow {
         animation: pulseGlowSlow 2.5s ease-in-out infinite;
       }
-
-      @keyframes fadeText {
-        0% { opacity: 0; transform: translateY(10px); }
-        20% { opacity: 0; transform: translateY(10px); } /* Start fading in slightly later */
-        100% { opacity: 1; transform: translateY(0); }
-      }
-      .animate-fadeText {
-        animation: fadeText 1.5s ease-out 0.5s forwards; /* Delay start to appear after M */
-        opacity: 0; /* Hidden by default */
-      }
-
     </style>
-    <!-- Define global environment variables for browser-native module loading -->
     <script>
-      // Default Hardhat RPC URL. Adjust if your local network is different.
-      window.VITE_RPC_URL = "http://127.0.0.1:8545";
-      // Placeholder addresses for local development (Hardhat default deployer addresses).
-      // REPLACE THESE WITH YOUR ACTUAL DEPLOYED CONTRACT ADDRESSES on your Hardhat network.
+      // Immediate process shim to prevent ReferenceErrors
+      window.process = { env: { NODE_ENV: 'production', API_KEY: '' } };
+      
+      // Ritual environment variables
+      window.VITE_RPC_URL = "https://shape-mainnet.g.alchemy.com/v2/J1HfoMSvISZdnANVlkTA6";
       window.VITE_NFT_ADDRESS = "0x5FbDB2315678afecb367f032d93F642f64180aa3";
       window.VITE_TOKEN_ADDRESS = "0xCf7Ed3AccA5a467e9e704C703E8D87F634fEAb28";
       window.VITE_STAKING_ADDRESS = "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9";
+      window.VITE_SWAP_ADDRESS = "0x70997970C51812dc3A0108C7f020ea650455785c";
     </script>
-<script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "react-router-dom": "https://esm.sh/react-router-dom@6.24.1",
-    "react/": "https://esm.sh/react@18.2.0/",
-    "react": "https://esm.sh/react@18.2.0",
-    "react-dom/": "https://esm.sh/react-dom@18.2.0/",
-    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "react": "https://esm.sh/react@18.3.1",
+    "react-dom": "https://esm.sh/react-dom@18.3.1",
+    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
+    "react-router-dom": "https://esm.sh/react-router-dom@6.24.1?deps=react@18.3.1,react-dom@18.3.1",
+    "@tanstack/react-query": "https://esm.sh/@tanstack/react-query@5.51.1?deps=react@18.3.1,react-dom@18.3.1",
+    "viem": "https://esm.sh/viem@2.21.31",
+    "viem/chains": "https://esm.sh/viem@2.21.31/chains",
+    "wagmi": "https://esm.sh/wagmi@2.12.0?deps=react@18.3.1,react-dom@18.3.1,@tanstack/react-query@5.51.1,viem@2.21.31",
+    "wagmi/connectors": "https://esm.sh/wagmi@2.12.0/connectors?deps=react@18.3.1,react-dom@18.3.1,@tanstack/react-query@5.51.1,viem@2.21.31",
+    "js-confetti": "https://esm.sh/js-confetti@0.13.1",
     "date-fns": "https://esm.sh/date-fns@3.6.0",
     "file-saver": "https://esm.sh/file-saver@2.0.5",
-    "zustand": "https://esm.sh/zustand@4.5.2",
-    "js-confetti": "https://esm.sh/js-confetti@0.13.1",
-    "viem/": "https://esm.sh/viem@2.43.1/",
-    "viem": "https://esm.sh/viem@2.43.1",
-    "wagmi/": "https://esm.sh/wagmi@2.12.0/",
-    "wagmi": "https://esm.sh/wagmi@2.12.0",
-    "wagmi/react": "https://esm.sh/wagmi@2.12.0/react",
-    "wagmi/connectors": "https://esm.sh/wagmi@2.12.0/connectors"
+    "zustand": "https://esm.sh/zustand@4.5.2?deps=react@18.3.1",
+    "@google/genai": "https://esm.sh/@google/genai@0.21.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "viem/": "https://esm.sh/viem@^2.43.3/",
+    "wagmi/": "https://esm.sh/wagmi@^3.1.3/"
   }
 }
 </script>
 </head>
-<body>
+<body class="bg-slate-950">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
